--- a/home.html
+++ b/home.html
@@ -17,7 +17,11 @@
       <h1>Hello World</h1>
       <!-- insert hello world here -->
       <!-- image source, created an assets folder with the rubber duck png image -->
-      <img src="./assets/rubber duck with shades and a chain.png" />
+      <img
+        id="rubberDuck"
+        src="./assets/rubber duck with shades and a chain.png"
+        alt="rubberduck facing fourth wall wearing shades and a chain necklace"
+      />
       <!-- welcome paragraph here -->
       <p>
         Welcome to our website! Dive into a world where creativity and
