--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,112 @@
-Not implemented yet! 
-
-<br>
-<br>
-
+<!-- Not implemented yet!  -->
 <a href="./home.html"><< Back </a>
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Boyd Querubin's Online Resume</title>
+    <link href="styles.css" rel="stylesheet" />
+  </head>
+  <body>
+    <header>
+      <h1>Boyd Querubin</h1>
+      <a href="./home.html" target="_blank">
+        <img src="./assets/boyd.jpg" alt="image of boyd" height="150" />
+      </a>
+      <img
+        src="./assets/Contact Info.png"
+        alt="image of boyd's contact information"
+        height="140"
+      />
+    </header>
+
+    <hr />
+    <main>
+      <section class="summary">
+        <h2>Summary</h2>
+        <p>
+          I am a marketing professional with 4 years of experience in digital
+          marketing. Proficient in SEO and social media marketing, I am
+          currently working as a Digital Content Manager and Creator for a local
+          business in Rigby, Idaho. I am an aspiring Web Developer with a hunger
+          to expand my expertise in front-end and back-end web development.
+        </p>
+      </section>
+
+      <section class="interactive-components">
+        <button id="color">My Favorite Color</button>
+        <button id="place">My Favorite Place</button>
+        <button id="ritual">My Favorite Ritual</button>
+      </section>
+
+      <section class="skills">
+        <h2>Skills</h2>
+        <div class="hard-skills">
+          <h3>Hard Skills and Software Knowledge</h3>
+          <ul>
+            <li>HTML, CSS, JavaScript</li>
+            <li>Blender 3D</li>
+            <li>
+              Adobe suite: Photoshop, Illustrator, After Effects, Premiere Pro,
+              Audition, InDesign
+            </li>
+            <li>GoPro, DJI, Blackmagic, Sony, Insta360</li>
+          </ul>
+        </div>
+        <div class="soft-skills">
+          <h3>Soft Skills</h3>
+          <ul>
+            <li>Leader and Team Player</li>
+            <li>
+              Communication
+              <ul>
+                <li>Interpersonal</li>
+                <li>Verbal and Nonverbal</li>
+                <li>Listening and Written</li>
+                <li>Adaptability and Flexibility</li>
+              </ul>
+            </li>
+            <li>Problem Solving and Creativity</li>
+            <li>Time and Stress Management</li>
+            <li>Professionalism and Customer Service</li>
+          </ul>
+        </div>
+      </section>
+      <section class="interests">
+        <h2>Interests</h2>
+        <ul>
+          <li>Coding</li>
+          <li>Movies</li>
+          <li>Spending quality time with family</li>
+          <li>Video Games</li>
+          <li>Volleyball</li>
+          <li>
+            Creative pursuits such as playing the guitar, photography,
+            videography, animation
+          </li>
+        </ul>
+      </section>
+      <section class="goals">
+        <h2>Career Goals and Aspirations</h2>
+        <p>
+          As an individual with a passion for technology and a drive to excel in
+          the dynamic field of web development, I am committed to pursuing a
+          career change that aligns with my aspirations. With a background in
+          Marketing, I have cultivated a strong foundation in problem-solving,
+          critical thinking, and creativity. My goal is to leverage my skills
+          and enthusiasm to transition into a fulfilling career in web
+          development, where I can contribute meaningfully to projects,
+          collaborate with like-minded professionals, and ultimately make a
+          positive impact in the digital world.
+        </p>
+      </section>
+    </main>
+    <footer>
+      <p>© 2024 Boyd Querubin</p>
+    </footer>
+
+    <script src="profile.js"></script>
+  </body>
+</html>
