--- a/about.html
+++ b/about.html
@@ -10,21 +10,49 @@
         <li class="crumb"><a href="./home.html">Home</a></li>
         <li class="crumb"><a href="./profile.html">Profile</a></li>
         <li class="crumb"><a href="./about.html">About</a></li>
+        <li class="crumb"><a href="./rexburg.html">Rexburg</a></li>
       </ol>
     </nav>
 
     <content>
-      <h1>About</h1>
+      <h1>About Me</h1>
 
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
+        I'm Boyd Querubin, a 32-year-old originally from the Philippines. I
+        recently became a naturalized <br />
+        citizen of the United States. I'm fluent in both English and Tagalog,
+        speaking them both as if they <br />
+        were my native languages.
       </p>
+
+      <p>
+        I'm a husband and a father of three wonderful children. My journey
+        started with a Communications <br />
+        degree, and since graduating in 2019, I've been working as a
+        Marketer/Content Creator. <br />
+        However, I'm currently in the process of learning Web Design, as I'm
+        planning to make a career change <br />
+        in the near future. As part of this transition, I'm actively working on
+        creating an Online Portfolio <br />
+        from scratch, which is my current project.
+      </p>
+      <p>
+        In my free time, I enjoy playing volleyball, learning to code, and
+        spending quality time with my wife and kids.
+      </p>
+
+      <section class="about-images">
+        <img
+          id="maddyBoyd"
+          src="../assets/Maddy and Boyd.png"
+          alt="image of boyd and maddy"
+        />
+        <img
+          id="QChildren"
+          src="../assets/QChildren.png"
+          alt="image of boyd and maddy's children"
+        />
+      </section>
     </content>
   </body>
 </html>
