--- a/profile.html
+++ b/profile.html
@@ -36,9 +36,15 @@
       </section>
 
       <section class="interactive-components">
-        <button id="color">My Favorite Color</button>
-        <button id="place">My Favorite Place</button>
-        <button id="ritual">My Favorite Ritual</button>
+        <button id="color" class="button-color" type="button">
+          My Favorite Color
+        </button>
+        <button id="place" class="button-place" type="button">
+          My Favorite Place
+        </button>
+        <button id="ritual" class="button-ritual" type="button">
+          My Favorite Ritual
+        </button>
       </section>
 
       <section class="skills">
